[gd_scene load_steps=8 format=3 uid="uid://d3nwguycs25fy"]

[ext_resource type="Script" path="res://scenes/plant/cactus_plant/cactus_plant.gd" id="1_px5l8"]
[ext_resource type="PackedScene" uid="uid://syncrf2omc1y" path="res://scenes/plant/plant_animations.tscn" id="2_4uiyi"]
[ext_resource type="Texture2D" uid="uid://8eecr57sb6kt" path="res://assets/spritesheet.png" id="3_qhfax"]
[ext_resource type="PackedScene" uid="uid://etodwv0g65e" path="res://scenes/plant/satisfaction_particles.tscn" id="4_nykmp"]
[ext_resource type="PackedScene" uid="uid://bl3e111kk7mep" path="res://scenes/plant/dirt_particles.tscn" id="5_p31ek"]

[sub_resource type="AtlasTexture" id="AtlasTexture_520x6"]
atlas = ExtResource("3_qhfax")
region = Rect2(562, 1, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_jhmlt"]
radius = 8.0

[node name="CactusPlant" type="Node2D"]
script = ExtResource("1_px5l8")

[node name="PlantAnimations" parent="." instance=ExtResource("2_4uiyi")]

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, 7)
texture = SubResource("AtlasTexture_520x6")
offset = Vector2(0, -7)

[node name="SatisfactionParticles" parent="." node_paths=PackedStringArray("plant") instance=ExtResource("4_nykmp")]
plant = NodePath("..")

[node name="DirtParticles" parent="." instance=ExtResource("5_p31ek")]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jhmlt")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
